# Aicraft

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  docs.html  docusaurus.config.ts  gen-social-card.js  generate_pptx.py  index.html  mockup.html  package-lock.json  package.json  screenshot.js  sidebars.ts  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/css/: styles.3a9e6434.css  styles.a2faf69c.css  styles.f6df1e2f.css
assets/js/: 0058b4c6.2b56e9ba.js  0058b4c6.9260755c.js  0058b4c6.e6263026.js  0480b142.32c71fdc.js  05e3013f.0c58cd1a.js  05e3013f.0f50e746.js  05e3013f.5ac60457.js  05e3013f.b5c17e41.js  05e3013f.ecbf97db.js  07d20785.509dd473.js  07d20785.8ca34436.js  07d20785.93dc76df.js  07d20785.a3636a8c.js  07d20785.fc16e031.js  096221a1.18ce6ab8.js  096221a1.5deea26a.js  096221a1.f3536a12.js  096221a1.f7cde8c3.js  096221a1.fb1af048.js  0a3bc896.002c6f70.js  0a3bc896.135f46e1.js  0a3bc896.16f753a3.js  0a3bc896.7166a597.js  0a3bc896.718c6989.js  0e384e19.0ddd641f.js  0e384e19.55d277af.js  0e384e19.69aea526.js  0e384e19.b4e87449.js  17896441.bb5f14f5.js  1df93b7f.bb26926e.js  1df93b7f.ca7282c3.js  1df93b7f.e2f14b38.js  237.341e44cb.js  32684f0b.0db46924.js  32684f0b.76a4efe7.js  32684f0b.9fdb3822.js  32684f0b.a4028eb9.js  3735c56b.bf637ecf.js  3f07d496.0981d6cf.js  3f07d496.28f3db09.js  (+83 more)
benchmarks/: bench_main.cpp
demo/: main.cpp
docs/: architecture.html  architecture.md  benchmarks.html  benchmarks.md  changelog.html  changelog.md  design-decisions.html  design-decisions.md  faq.html  faq.md  getting-started.html  getting-started.md  index.html  intro.md
docs/api/: activations.html  activations.md  autograd.html  autograd.md  layers.html  layers.md  loss.html  loss.md  memory.html  memory.md  optimizer.html  optimizer.md  overview.html  overview.md  quantize.html  quantize.md  simd.html  simd.md  tensor.html  tensor.md  vulkan.html  vulkan.md
docs/api/autograd/: index.html
docs/api/layers/: index.html
docs/api/loss/: index.html
docs/api/memory/: index.html
docs/api/optimizer/: index.html
docs/api/overview/: index.html
docs/api/quantize/: index.html
docs/api/simd/: index.html
docs/api/tensor/: index.html
docs/api/vulkan/: index.html
docs/architecture/: index.html
docs/benchmarks/: index.html
docs/design-decisions/: index.html
docs/getting-started/: index.html
docs/guides/: cross-compiling.html  cross-compiling.md  custom-layers.html  custom-layers.md  debugging.html  debugging.md  edge-deployment.html  edge-deployment.md  error-handling.html  error-handling.md  performance-tuning.html  performance-tuning.md  serialization.html  serialization.md  training.html  training.md  vulkan.html  vulkan.md
docs/guides/edge-deployment/: index.html
docs/guides/error-handling/: index.html
docs/guides/serialization/: index.html
docs/guides/training/: index.html
docs/guides/vulkan/: index.html
docs/internals/: autograd.html  autograd.md
docs/tutorials/: autoencoder.html  autoencoder.md  mnist.html  mnist.md
img/: social-card.html
include/aicraft/: aicraft.h  autograd.h  error.h  fast_math.h  layers.h  loss.h  memory.h  optimizer.h  platform.h  quantize.h  serialize.h  simd_math.h  tensor.h  tensor_ops.h  thread_pool.h  vulkan.h
src/css/: custom.css
src/pages/: index.module.css  index.tsx
src/theme/: Root.tsx
tests/: test_main.cpp
